# material_design_icons

./: Cargo.toml  NOTICE  readme.md
.github/workflows/: tests.yml
src/: font.rs  glyphs.rs  icon.rs  lib.rs
