[package]
name = "material_design_icons"
authors = ["@rscarson"]
description = "Flexible linear interpolator for Rust"
edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.1.0"
repository = "https://github.com/rscarson/lineic"

keywords = ["font", "icon", "iced", "icons", "fonts"]
categories = ["api_bindings", "text_processing", "parsing_tools", "gui"]
readme = "readme.md"

[features]
default = []
iced = ["dep:iced"]
parser = ["allsorts"]

[dependencies]
iced = { version = "0.13.1", optional = true }
allsorts = { version = "0.15.0", optional = true }

[[bin]]
name = "parse"
required-features = ["parser"]